--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "@types/node": "^16.18.18",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@urbica/react-map-gl": "^1.16.2",
+    "mapbox-gl": "^0.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
